trunk/src/objects/ProjectSubscription__c.object
<CustomObject>
    <description>The Project Subscription Object</description>
    <fields>
        <fullName>ProjectAfterOfExpiringTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Repetitive after expiring</description>
        <label>ProjectAfterOfExpiringTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectBeforeOfExpiringTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As this to overcome their due date</description>
        <label>ProjectBeforeOfExpiringTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectDayOfExpiringTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Expiry day</description>
        <label>ProjectDayOfExpiringTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectMemberJoinLeave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a Member join leave from Project</description>
        <label>ProjectMemberJoinLeave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTaskAssignToMeChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProjectTaskAssignToMeChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTaskAssignedToMe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If i have proyect task assigned to me</description>
        <label>ProjectTaskAssignedToMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTaskChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If project task has changed</description>
        <label>ProjectTaskChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTaskDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Project task has been deleted</description>
        <label>ProjectTaskDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project</description>
        <label>Project</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipName>ProjectSubscription</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Subscription</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Subscription</label>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Subscription</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>